# pyconfman

./: .gitignore  .gitmodules  README.rst  pyproject.toml  tox.ini
pyconf/: __init__.py  copy.py
pyconfman/: __main__.py  copy.py  inventory.py
pyconfman/models/: __init__.py  action.py  inventory.py  model.py  playbook.py  resource.py
pyconfman/modules/copy/: __init__.py
pyconfman/modules/copy/src/: exceptions.py  models.py  module.py
pyconfman/modules/copy/tests/: fixtures.py  test_copy.py
test/: fixtures_copy.py  test_copy.py
tests/run/: config.toml  inventory.py  test_run.py
tests/vars/: config.toml  test_vars.py  vars_inventory.py  vars_playbook.py
