[tool.poetry]
name = "pyconfman"
version = "0.1.0"
description = ""
authors = ["Lars Liedtke <lars@familie-liedtke.net>"]

[tool.poetry.dependencies]
python = "^3.10"
tomli = { version = "^2.0.1", python = "<3.11" }
tox = "^3"
black = "*"
pytest = "*"
mypy = "^0.9"

[tool.poetry.dev-dependencies]
pylint = "*"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """

[tox]
requires =
    pylint
    pytest
    black
    mypy
skip_missing_interpreters = true
envlist =
    py{39,310,311}-{black,lint,mypy,unittest,integration_test}

isolated_build = true

[testenv]
passenv=PYTHONPATH

[testenv:py{39,310,311}-black]
commands = black --check .
[testenv:py{39,310,311}-lint]
allowlist_externals =
    pylint
commands = pylint --ignore-paths .*/tests/.* pyconfman
[testenv:py{39,310,311}-mypy]
allowlist_externals =
    mypy
commands = mypy --exclude tests/* .
[testenv:py{39,310,311}-unittest]
commands =  pytest -vm unit .
[testenv:py{39,310,311}-integration_test]
commands = pytest -vm integration .
"""
[tool.pytest.ini_options]
markers = ["unit","integration"]